--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,44 @@ body {
   font-family: 'Poppins', sans-serif;
   background-color: #fefcfc;
 }
+
+.bg-blue {
+  background-color: transparent;
+  color: #202d61;
+  font-weight: bold;
+  border: 2px solid #202d61;
+}
+
+.bg-blue:hover {
+  background-color: #202d61;
+  color: #E8C1F4;
+  border-color: #202d61;
+}
+
+.scrollbar {
+  width: 100%;
+  overflow-y: auto;
+  overflow-x: hidden;
+  background-clip: padding-box;
+  padding-right: 5px;
+  padding-bottom: 5px;
+}
+.scrollbar::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+.scrollbar::-webkit-scrollbar-thumb {
+  background: #cacaca;
+  background-clip: padding-box;
+  border-radius: 4px;
+}
+.scrollbar::-webkit-scrollbar-thumb:active {
+  background-color: #999;
+}
+.scrollbar::-webkit-scrollbar-thumb:hover {
+  background: #b3b3b3;
+}
+.scrollbar::-webkit-scrollbar-track {
+  background: #e9e9e9;
+  border-radius: 4px;
+}
